@@ -18,14 +18,14 @@
 # bug-gdb@prep.ai.mit.edu
 
 # tests for namespaces
-# Written by Satish Pai <pai@apollo.hp.com> 1997-07-23
+# Originally written by Satish Pai <pai@apollo.hp.com> 1997-07-23
 
 # This file is part of the gdb testsuite
 
-# Note: These tests are geared to the HP aCC compiler,
+# Note: The original tests were geared to the HP aCC compiler,
 # which has an idiosyncratic way of emitting debug info
 # for namespaces.
-# Note: As of 2000-06-03, these pass under g++ - djb
+# Note: As of 2000-06-03, they passed under g++ - djb
 
 
 if $tracelevel then {
@@ -201,18 +201,12 @@ gdb_test "print 'C::cc'" "\\$\[0-9\].* = 2" "print C::cc"
 gdb_test "print cd" "\\$\[0-9\].* = 3" "print cd"
 gdb_test "print 'C::D::cd'" "\\$\[0-9\].* = 3" "print C::D::cd"
 gdb_test "print 'E::cde'" "\\$\[0-9\].* = 5" "print E::cde"
-
-# FIXME: carlton/2002-10-17: It's somewhat accidental that we
-# currently get this one right.  (Delete this comment once namespace
-# scope issues have been handled correctly!)
-
 gdb_test "print shadow" "\\$\[0-9\].* = 13" "print shadow"
 
-
 # NOTE: carlton/2002-10-17: This one won't get fixed until namespaces
-# are first-class objects.
+# are first-class objects.  The PR isn't right, either.
 
-setup_kfail "FIXME"
+setup_kfail "gdb/827"
 gdb_test "print 'E::ce'" "No symbol \"E::ce\" in current context." "print E::ce"
 
 # Some anonymous namespace tests.
@@ -226,7 +220,7 @@ gdb_test "print 'G::XgX'" "\\$\[0-9\].* = 11" "print G::XgX"
 
 # Test namespace renaming.
 
-setup_kfail "FIXME"
+setup_kfail "gdb/830"
 gdb_test "print 'I::h'" "\\$\[0-9\].* = 14" "print I::h"
 
 # Test using directives.
@@ -235,22 +229,22 @@ gdb_test "print 'I::h'" "\\$\[0-9\].* = 14" "print I::h"
 # have unfortunate interactions with namespace scope issues.  As of
 # this writing, some of these pass, but they pass for the wrong reasons.
 
-setup_kfail "FIXME"
+setup_kfail "gdb/829"
 gdb_test "print j" "\\$\[0-9\].* = 15" "print j"
-setup_kfail "FIXME"
+setup_kfail "gdb/829"
 gdb_test "print 'L::k'" "\\$\[0-9\].* = 16" "print L::k"
-setup_kfail "FIXME"
+setup_kfail "gdb/829"
 gdb_test "print k" "No symbol \"k\" in current context." "print k"
-setup_kfail "FIXME"
+setup_kfail "gdb/829"
 gdb_test "print cdm" "\\$\[0-9\].* = 17" "print cdm"
-setup_kfail "FIXME"
+setup_kfail "gdb/829"
 gdb_test "print 'Q::o'" "\\$\[0-9\].* = 18" "print Q::o"
-setup_kfail "FIXME"
+setup_kfail "gdb/829"
 gdb_test "print o" "No symbol \"o\" in current context." "print o"
 
 # Test using declarations.  I should probably test these more.
 
-setup_kfail "FIXME"
+setup_kfail "gdb/831"
 gdb_test "print r1" "\\$\[0-9\].* = 19" "print r1"
-setup_kfail "FIXME"
+setup_kfail "gdb/831"
 gdb_test "print r2" "No symbol \"r2\" in current context." "print r2"
