@@ -1,3 +1,9 @@
+2002-11-19  David Carlton  <carlton@math.stanford.edu>
+
+	* gdb.c++/namespace.exp: Delete FIXME comment.
+	Fill in PR's for setup_kfail's.
+	Fiddle with comments at top of file.
+
 2002-11-08  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* lib/mi-support.exp (mi_gdb_start): Verify the startup message 
